<resources>
<string name="app_name">ContactCard</string>
<string name="name">Name</string>
<string name="forgot_password">Forgot Password?</string>
<string name="gradientbackground">gradientBackground</string>
<string name="logo">LOGO</string>
<string name="login">Login</string>
<string name="password">Password</string>
<string name="forgot_your_login_details_get_help_signing_in">Forgot your login details? Get help signing in!</string>
</resources>
